# rust-agent-tool

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  appliance.toml  rates.toml  requirements.md
.antigravity/skills/ai-engineer-soul/: SKILL.md
.antigravity/skills/hexagonal-architecture/: SKILL.md
.antigravity/skills/rust-soul/: SKILL.md
.antigravity/skills/security/: SKILL.md
docs/: GUIDE.md
src/: main.rs
src/adapters/: crypto_adapter.rs  fastembed_adapter.rs  hnsw_adapter.rs  llama_adapter.rs  mod.rs  notify_adapter.rs  system_verifier.rs
src/domain/: governance.rs  heuristics.rs  mod.rs  transformer.rs
src/ports/: mod.rs
src/services/: auditor.rs  gatekeeper.rs  grill.rs  integrity_gate.rs  mod.rs  orchestrator.rs
