[package]
name = "rust-agent-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
fastembed = "5.13.4"
hex = "0.4.3"
hnsw_rs = "0.3.4"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
